Continuing work on alternate tree-based aircraft view with liveries.